# lab-09

./: README.md
.github/workflows/: main.yml
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt  hello_world.cpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp  solver.h
